[package]
name = "motor_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sample_1"
path = "src/bin/sample/sample_1.rs"

[[bin]]
name = "sample_2"
path = "src/bin/sample/sample_2.rs"

[dependencies]
advanced-pid = "0.2.2"
rusb = "0.9"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "*"